# medication-leaflet-qa-system

./: .gitignore  .pre-commit-config.yaml  .prettierrc  AUDIT_SUMMARY.md  AUTO_FIX_SETUP.md  DECISIONS.md  DEPLOYMENT_CLEANUP.md  Dockerfile  Dockerfile.render  ENGINEER_HANDOFF.md  GITIGNORE_AUDIT.md  GITIGNORE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Justfile  LICENSE  LOCAL_SETUP.md  MONOREPO_AUDIT.md  Medication-Leaflet-QA-API.postman_collection.json  Procfile  QUICKSTART.md  QUICK_FIXES.md  QUICK_REFERENCE.md  RAILWAY_DEPLOYMENT.md  README.md  RENDER_DEPLOYMENT.md  SERVICE_AUDIT.md  WEAVE_INTEGRATION.md  env.example  mypy.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  railway.backend.json  railway.json  render.yaml  requirements.txt  start.py
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  agent.py  api.py  ingest.py
apps/api/scripts/: seed_ingest.py
apps/evals/: pyproject.toml
apps/evals/app/: __init__.py  evals.py
apps/web/: README.md  package.json  tailwind.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api/ask/: route.ts
apps/web/app/api/eval/run/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/ingest/: route.ts
apps/web/app/evals/: page.tsx
apps/web/app/ingest/: page.tsx
apps/web/src/components/: citations-list.tsx  copy-button.tsx  footer.tsx  header.tsx  health-badge.tsx  message-bubble.tsx  thinking-bubble.tsx
apps/web/src/components/ui/: card.tsx
apps/web/src/types/: api.ts
infra/: Dockerfile  Dockerfile.frontend  docker-compose.fullstack.yml  docker-compose.yml
scripts/: auto-fix.sh  deploy-to-render.sh  update_copyright_year.py
tests/: __init__.py  test_chunker.py  test_integration.py  test_prompts.py  test_types.py
