# Root uv workspace
[project]
name = "rag-health"
version = "0.1.0"
description = "RAG POC for healthcare drug-label Q&A"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/py/core",
    "packages/py/retrieval",
    "apps/api",
    "apps/evals",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=3.8.0",
    "types-redis>=4.6.0.20241004",
    "lxml-stubs>=0.5.1",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "T20", "SIM", "RET", "ARG"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Workspace configuration
namespace_packages = true
explicit_package_bases = true

# Ignore missing imports for external packages without stubs
[[tool.mypy.overrides]]
module = [
    "openai.*",
    "fastapi.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langgraph.*",
    "tiktoken.*",
    "wandb.*"
]
ignore_missing_imports = true
