[project]
name = "rag-health-api"
version = "0.1.0"
description = "FastAPI service with LangGraph RAG agent"
requires-python = ">=3.11"
dependencies = [
    "rag-health-core",
    "rag-health-retrieval",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "langgraph>=0.2.34",
    "langchain-core>=0.3.9",
    "langchain-openai>=0.2.1",
    "httpx>=0.27.0",
    "lxml>=5.3.0",
    "weave>=0.51.0",
]

[tool.uv.sources]
rag-health-core = { workspace = true }
rag-health-retrieval = { workspace = true }
